--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="it">
 
 <head>
     <meta charset="UTF-8">
@@ -15,10 +15,10 @@
     <header>
         <nav>
             <ul>
-                <li><a href="#">Home</a></li>
-                <li><a href="#">About</a></li>
-                <li><a href="#">Work</a></li>
-                <li><a href="#">Contact</a></li>
+                <li class="lora"><a href="#">Home</a></li>
+                <li class="lora"><a href="#">About</a></li>
+                <li class="lora"><a href="#">Work</a></li>
+                <li class="lora"><a href="#">Contact</a></li>
             </ul>
         </nav>
     </header>
@@ -34,7 +34,7 @@
 
     <section class="digitalizzazione box">
         <div class="testo">
-            <h1>La Digitalizzazione non è ecologica</h1>
+            <h1 class="lora">La Digitalizzazione non è ecologica</h1>
             <p>La Rivoluzione Digitale non è pienamente ecologica: le tecnologie informatiche consumano enormi quantità
                 di energia, incidendo fortemente sull’ambiente. Internet e le criptovalute, come il bitcoin, richiedono
                 risorse energetiche sempre maggiori, mentre infrastrutture fisiche come server, cavi e data center
@@ -47,7 +47,7 @@
 
     <section class="rifiuti box">
         <div class="testo">
-        <h1>Rifiuti elettronici</h1>
+        <h1 class="lora">Rifiuti elettronici</h1>
         <p>Nel mondo vengono prodotti enormi quantitativi di rifiuti elettronici: nel 2019 hanno raggiunto 53,6 milioni
             di tonnellate, con bassi livelli di riciclo e gravi danni ambientali. Nonostante le dichiarazioni di
             sostenibilità, molte aziende continuano a progettare prodotti di breve durata.</p>
@@ -61,7 +61,7 @@
 
     <section class="sostenibilità box">
         <div class="testo">
-            <h1>Sostenibilità Digitale</h1>
+            <h1 class="lora">Sostenibilità Digitale</h1>
             <p>L’efficienza tecnologica da sola non è sufficiente: servono politiche che favoriscano dispositivi più
                 durevoli e riparabili, una gestione collettiva delle infrastrutture digitali e una pianificazione
                 responsabile dell’intero ciclo di vita delle tecnologie, affinché la rivoluzione digitale sia davvero
